assets/css/output.css
/* ... */
html {
  scroll-behavior: smooth;
}
#disqus_thread iframe[src*='ads-iframe'] {
  display: none;
}
#dream-global-bg {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-position: center;
  background-size: cover;
  z-index: -1;
}
.flip-container {
  width: 100vw;
  height: calc(100vh - 80px - 2rem);
  max-width: 100%;
  perspective: 1000px;
  &.flip-it {
    .flipper {
      transform: rotateY(180deg);
    }
    .front {
      overflow: hidden;
    }
    .back {
      transform: translateX(0) rotateY(180deg);
    }
  }
  .flipper {
    position: relative;
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transition: transform 0.75s;
  }
  .front, .back {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    transition: transform 0.75s;
  }
  .front {
    transform: rotateY(0deg);
  }
  .back {
    transform: translateX(-25%) rotateY(180deg);
  }
}
#TableOfContents {
  position: sticky;
  top: calc(var(--spacing) * 24);
  max-height: calc(100vh - 7rem);
  overflow-y: auto;
}
@supports (-moz-appearance: none) {
  #TableOfContents {
    position: initial;
  }
}
/* ... */

